fixed spacing issues

--- a/styles/index.css
+++ b/styles/index.css
@@ -102,6 +102,7 @@ img {
 .tech-used {
     margin-top: 0;
     padding-left: 1em;
+    z-index: -1;
 }
 
 .tech-icons {
@@ -172,7 +173,7 @@ section.button-section {
     margin-bottom: 3em;
 }
 
-span {
+.button-span {
     border-radius: 3px;
     height: 3em;
     cursor: pointer;
@@ -185,7 +186,7 @@ span {
     padding: 1em;
 }
 
-span:hover {
+.button-span:hover {
     color: white;
     background-color: rgb(41, 41, 41);
     transform: translate(.3em, -.3em);
@@ -298,6 +299,7 @@ a:visited {
 .education-ul {
     margin-bottom: 5em;
     line-height: 1.5em;
+    margin-left: -1.5em;
 }
 
 @media screen and (min-width: 375px) {
@@ -307,6 +309,9 @@ a:visited {
 }
 
 @media screen and (min-width: 500px) {
+    .education-ul {
+        margin-left: 0;
+    }
     main {
         margin-left: 5%;
         margin-right: 5%;
